
- # 1519924 - Pressing escape in Path: field gets rid of dock window.
   (#1854542 - Jeff Robertson - jefftbob)

- Fixed occasional input problems after switching application focus.
  (SF.net bug #2093501, #1650718 - Kazutoshi Satoda)

- Numpad keys (ADD, SUBTRACT, etc) had been not bindable since 4.3pre13.
  (SF.net bug #1936714 - Kazutoshi Satoda)

}}}
{{{ Miscellaneous

- Moved buffer list sorting options from General to View Option Pane
  with other bufferset options. (Alan Ezust)

- Enabled reverse regex search. (SF.net patch #1923613 - Greg Merrill)
  NOTE: There is a known problem with "$". (SF.net bug #2069249)

- New option in saving/backup: Never mark untitled buffers dirty.
  Related to that, buffers with length=0 never never marked dirty.
  -- (request # 2068307 - Alan Ezust)

- New option in saving/backup: Calculate MD5 hash to see if the
  file as loaded from disk is the same as what is in the buffer.
  -- (Request # 2077326 - Alan Ezust)

- New action new-file-in-mode, which opens a dialog listing the
  available modes, the user can select one and a new file is created
  under that mode. (SF.net patch #1829669 - Eric Berry)

- Removed own back buffers for textarea, which were meant to speed up
  painting textarea, because the effect seemed to be not noticeable and
  not stable over runtime environments, while it broke Background plugin
  (SF.net Plugin Bugs #1620694) and consumed much memory.
  (Kazutoshi Satoda)

- Improved rendering of complex text layout (like Indic text) in text
  area. (SF.net bug #981012 - Kazutoshi Satoda)

- Added some new encoding detectors which reads some lines at the top of
  file and search for encoding declaration pattern in regex.
    - html: finds "\bcharset=(ENCODING)"
    - python: finds "coding[=:]\s*(ENCODING)"
  (Kazutoshi Satoda)

- Abbreviated buffer path in MiscUtilities.abbreviate()
  Replaces homedir with tilde, and reverse-expands environment variables.
  (# 1910097 - Jakub Roztocil, Alan Ezust)
  