@@ -46,6 +46,7 @@ Jeff Robertson, Kevin Hunter, and Eric Berry for contributing to this release.
 }}}
 {{{ Miscellaneous
 
+
 - Moved buffer list sorting options from General to View Option Pane
   with other bufferset options. (Alan Ezust)
 
@@ -86,6 +87,10 @@ Jeff Robertson, Kevin Hunter, and Eric Berry for contributing to this release.
 - Angle Brackets are now also matched from find matching bracket.
     (encorejane - # 1849215)
 
+- ActionSet combobox in "add to context menu" is sorted and remembers previous
+  selection. (Alan Ezust)
+
+    
 }}}
 {{{ Docker Plugin features merged into jEdit Core
 - New actions: View - Docking - Load|Save docking layout (of current mode)
